<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">My App Portfolio</string>

    <string name="portfolio_header">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="title_activity_popular_movies">PopularMovies</string>
    <string name="hello_world">Hello world!</string>


    <!-- menu strings -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_movie_detail">Details</string>
    <string name="title_activity_settings">Movie Settings</string>

    <!--Settings-->
    <string name="pref_category_general">General</string>
    <string name="label_category_sort_order">Sort Order</string>
    <string name="label_sortby_popularity">Popularity</string>
    <string name="label_sortby_rating">Rating</string>
    <string name="value_sortby_popularity" translatable="false">popularity</string>
    <string name="value_sortby_rating" translatable="false">vote_average</string>

    <string name="key_pref_sort_order" translatable="false">sortOrder</string>
    <string name="value_pref_sort_order_default">@string/value_sortby_popularity</string>
    <string name="key_pref_page_number">lastAccessedPageNumber</string>
    <string name="key_pref_is_favorites">isfavorties</string>
    <string name="action_share">Share</string>


    <!--Movie detail -->
    <string name="format_rating"><xliff:g id="rating">%1.1f</xliff:g>/10</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">nano.smenedi.com</string>
    <string name="content_authority">com.smenedi.nano</string>

    <!--transitions-->
    <string name="poster_transition">poster</string>
    <string name="internet_unavailable">You are not connected!</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="favorites">Favorites</string>
    <string name="no_youtube">Youtube is not installed</string>

</resources>
