<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/nano_degree_margin_bottom"
            android:layout_marginTop="@dimen/nano_degree_margin_top"
            android:layout_width="wrap_content"
            android:text="@string/portfolio_header"
            android:textSize="@dimen/nano_degree"/>

        <Button
            style="@style/app_buttons"
            android:id="@+id/spotify_streamer"
            android:text="@string/spotify_streamer"/>

        <Button
            style="@style/app_buttons"
            android:id="@+id/scores_app"
            android:text="@string/scores_app"/>

        <Button
            style="@style/app_buttons"
            android:id="@+id/library_app"
            android:text="@string/library_app"/>

        <Button
            style="@style/app_buttons"
            android:id="@+id/build_it_bigger"
            android:text="@string/build_it_bigger"/>

        <Button
            style="@style/app_buttons"
            android:id="@+id/xyz_reader"
            android:text="@string/xyz_reader"/>

        <Button
            style="@style/app_buttons"
            android:background="@android:color/holo_red_light"
            android:id="@+id/capstone"
            android:text="@string/capstone"/>

    </LinearLayout>
</ScrollView>
